@@ -99,13 +99,19 @@ variations of each architecture known as <quote>flavors</quote>.
 </row>
 
 <row>
-  <entry morerows="3">MIPS (big endian)</entry>
-  <entry morerows="3">mips</entry>
+  <entry morerows="5">MIPS (big endian)</entry>
+  <entry morerows="5">mips</entry>
   <entry>SGI IP22 (Indy/Indigo 2)</entry>
   <entry>r4k-ip22</entry>
 </row><row>
   <entry>SGI IP32 (O2)</entry>
   <entry>r5k-ip32</entry>
+</row><row>
+  <entry>MIPS Malta (32 bit)</entry>
+  <entry>4kc-malta</entry>
+</row><row>
+  <entry>MIPS Malta (64 bit)</entry>
+  <entry>5kc-malta</entry>
 </row><row>
   <entry>Broadcom BCM91250A (SWARM)</entry>
   <entry>sb1-bcm91250a</entry>
@@ -115,10 +121,16 @@ variations of each architecture known as <quote>flavors</quote>.
 </row>
 
 <row>
-  <entry morerows="2">MIPS (little endian)</entry>
-  <entry morerows="2">mipsel</entry>
+  <entry morerows="4">MIPS (little endian)</entry>
+  <entry morerows="4">mipsel</entry>
   <entry>Cobalt</entry>
   <entry>cobalt</entry>
+</row><row>
+  <entry>MIPS Malta (32 bit)</entry>
+  <entry>4kc-malta</entry>
+</row><row>
+  <entry>MIPS Malta (64 bit)</entry>
+  <entry>5kc-malta</entry>
 </row><row>
   <entry>Broadcom BCM91250A (SWARM)</entry>
   <entry>sb1-bcm91250a</entry>
