@@ -22,6 +22,12 @@ SGI IP32: this platform is generally known as SGI O2.
 </para></listitem>
 <listitem><para>
 
+MIPS Malta: this platform is emulated by QEMU and is therefore a nice way
+to test and run Debian on MIPS if you don't have the hardware.
+
+</para></listitem>
+<listitem><para>
+
 Broadcom BCM91250A (SWARM): this is an ATX form factor evaluation board
 from Broadcom based on the dual-core SB1 1250 CPU.
 
