@@ -6,6 +6,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   * Provide information about all iop32x and orion5x installation media.
   * Describe Orion and Versatile as supported platforms.
   * Fix the NSLU2 download link.
+  * Describe MIPS Malta.
 
   [ Frans Pop ]
   * Update copyright to 2008.
